--- a/.github/workflows/sphinx-build.yml
+++ b/.github/workflows/sphinx-build.yml
@@ -2,32 +2,20 @@ name: "Pull Request Docs Check"
 
 on: 
   pull_request:
-    branches: [ master ]
-
+    branches:
+      - master
 
 jobs:
-
   docs:
     runs-on: ubuntu-latest
     steps:
-
-    - name: Setup the environment
-      uses: actions/checkout@v1
+    - uses: actions/checkout@v2
 
     - name: Create the new documentation
       uses: ammaraskar/sphinx-action@master
       with:
-        docs-folder: "doc/"
-
-    - name: Commit documentation changes
-      run: |
-        git clone https://github.com/mathLab/EZyRB.git --branch gh-pages --single-branch gh-pages
-        cp -r docs/build/html/* gh-pages/
-        cd gh-pages
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
-        git add .
-        git commit -m "Update documentation" -a || true
+        pre-build-command: "python -m pip install pip sphinx_rtd_theme numpy scipy GPy matplotlib -U"
+        docs-folder: "docs/"
 
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
