--- a/.github/workflows/sphinx-build.yml
+++ b/.github/workflows/sphinx-build.yml
@@ -24,3 +24,5 @@ jobs:
         deploy_key: ${{ secrets.DEPLOY_PRIVATE_KEY }}
         publish_dir: ./docs/build/html
         allow_empty_commit: true
+        user_name: 'github-actions[bot]'
+        user_email: 'github-actions[bot]@users.noreply.github.com'
